--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,3 +1,30 @@
+body {
+  font-family: sans-serif;
+  padding-top: 0;
+}
+
 h1 {
   color: red;
+}
+
+#main-nav ul {
+  display: flex;
+  font-size: 1.5rem;
+  gap: 1rem;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+}
+
+.nav-item a {
+  color: blue;
+  text-decoration: none;
+}
+
+.nav-item a.active {
+  color: green;
+}
+
+.nav-item a:hover {
+  color: purple;
 }
