--- a/app/styles/todos.css
+++ b/app/styles/todos.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  align-items: flex-start;
+  align-items: start;
 
   background-color: lightgray;
   padding: 1rem;
