added custom spinner

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -32,3 +32,22 @@ h1 {
 .nav-item a:hover {
   color: purple;
 }
+
+#spinner {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+
+  border: 3px solid rgba(0,0,255,.3);
+  border-radius: 50%;
+  border-top-color: blue;
+
+  animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
