--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -68,7 +68,7 @@ input {
   width: 20px;
   height: 20px;
 
-  border: 3px solid rgba(0,0,255,.3);
+  border: 3px solid rgba(0, 0, 255, 0.3);
   border-radius: 50%;
   border-top-color: blue;
 
@@ -76,8 +76,12 @@ input {
 }
 
 @keyframes spin {
-  to { -webkit-transform: rotate(360deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
 }
 @-webkit-keyframes spin {
-  to { -webkit-transform: rotate(360deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
 }
