--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,16 +1,15 @@
-body {
-  font-family: sans-serif;
-  padding-top: 0;
+:root {
   --button-font-size: 1.5rem;
 }
 
 button {
+  background-color: lightgray;
   border-radius: 0.5rem;
   padding: 0.5rem;
 }
 
 button:disabled {
-  background-color: lightgray;
+  color: white;
 }
 
 .button-cancel {
@@ -37,7 +36,9 @@ h1 {
 }
 
 input {
+  border-color: lightgray;
   border-radius: 0.5rem;
+  border-width: 1px;
   padding: 0.5rem;
 }
 
