--- a/app/styles/login.css
+++ b/app/styles/login.css
@@ -1,21 +1,7 @@
-.login {
-  background-color: linen;
-  padding: 1rem;
-}
-
-.login .buttons {
-  display: flex;
-  gap: 0.5rem;
-}
-
-.login form > div {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  margin-bottom: 1rem;
+.login div {
+  @apply flex items-center gap-2 mb-4;
 }
 
 .login label {
-  text-align: right;
-  width: 5rem;
+  @apply text-right w-20;
 }
